add missing tranlsation

--- a/app/views/spree/checkout/_pickup_location.html.erb
+++ b/app/views/spree/checkout/_pickup_location.html.erb
@@ -26,7 +26,7 @@
       <div class="funkyradio">
         <div class="pull-right dispatch funkyradio-warning">
           <input type="radio" name="pickup_location" id='pickup_location_<%= pickup_location.id%>'/>
-          <label for='pickup_location_<%= pickup_location.id%>'>Dispatch</label>
+          <label for='pickup_location_<%= pickup_location.id%>'><%= Spree.t(:dispatch) %></label>
         </div>
       </div>
     </div>
