Make checkout form more compact without overriding a template

--- a/app/views/spree/checkout/_pickup_location_form.html.erb
+++ b/app/views/spree/checkout/_pickup_location_form.html.erb
@@ -44,6 +44,9 @@
         $('#state').find('select').trigger('change');
       <% end %>
       pickupCheckout.init();
+
+      $("[data-hook='billing_fieldset_wrapper'] .form-group").addClass('col-sm-6')
+      $("[data-hook='billing_fieldset_wrapper'] #baddress1").addClass('col-sm-12')
     });
   <% end %>
 <% end %>
