--- a/app/views/spree/checkout/_pickup_location_form.html.erb
+++ b/app/views/spree/checkout/_pickup_location_form.html.erb
@@ -17,7 +17,7 @@
       </span>
     </div>
     <div class='col-md-2'>
-      <a href="javascript:void(0)" class=' btn btn-warning toggle-map btn-xs hide'>Show/Hide Map</a>
+      <a href="javascript:void(0)" class=' btn btn-warning toggle-map btn-xs hide'><%= Spree.t(:toggle_map) %></a>
     </div>
     <%= f.hidden_field :pickup_location_id, class: 'pickup_id' %>
   </div>
